--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -4084,3 +4084,84 @@
 		}
 	}
 }
+
+
+/*	Champion Finder
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-champion-finder {
+	.location-search-form {
+		position: relative;
+		max-width: 300px;
+		&.submitted {
+			.form-footer button[type=submit] {
+				&:before { display: none; }
+				&:after { display: block; }
+			}
+		}
+		input[type=text] {
+			border: none;
+			background-color: rgba(#fff, .25);
+			border-radius: 1000px;
+			padding: 1rem 1.5rem;
+			font-size: 1.25rem;
+			height: auto;
+			box-shadow: none;
+			color: #fff;
+			padding-right: 3rem;
+			&::placeholder {
+				color: rgba(#fff, .8);
+			}
+		}
+		.form-footer {
+			margin: 0;
+			button[type=submit] {
+				position: absolute;
+				right: .75rem;
+				top: calc(50% - 1rem);
+				padding: 0;
+				overflow: hidden;
+				text-indent: -10000px;
+				width: 2rem;
+				height: 2rem;
+				background-color: transparent;
+				border: none;
+				&:before {
+					@include icon(map-get($icomoon-icons, arrow-right-display), icomoon);
+					position: absolute;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					left: 0;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					font-size: 1.5rem;
+					line-height: 1;
+					text-indent: 0;
+					color: #fff;
+				}
+				&:after {
+					@include icon(fa-content($fa-var-circle-notch));
+					position: absolute;
+					display: none;
+					text-align: center;
+					left: calc((2rem - 24px) / 2);
+					top: calc((2rem - 24px) / 2);
+					width: 24px;
+					height: 24px;
+					font-size: 24px;
+					line-height: 1;
+					text-indent: 0;
+					color: #fff;
+					animation: fa-spin 2s infinite linear;
+				}
+			}
+		}
+	}
+	.map-container {
+		> .inner {
+			padding-top: 130px;
+		}
+	}
+}
