--- a/wp-content/plugins/crown-blocks/src/block-container/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-container/style.scss
@@ -93,6 +93,18 @@ $spacer: 1rem;
 			background-position: center;
 			background-size: cover;
 		}
+		.bg-video {
+			position: absolute;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			video {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
 	}
 
 	&.has-drop-shadow {
