--- a/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
@@ -20803,6 +20803,37 @@ nav.pagination {
       .wp-block-crown-blocks-tabbed-content.type-grid .tabbed-content-nav .drawer .wp-block-crown-blocks-tabbed-content-tab > .inner > .tab-title {
         display: none; }
 
+.wp-block-crown-blocks-tabbed-content.type-accordion > .inner > .tabbed-content-tabs > .inner {
+  display: block; }
+  .wp-block-crown-blocks-tabbed-content.type-accordion > .inner > .tabbed-content-tabs > .inner > .wp-block-crown-blocks-tabbed-content-tab {
+    border-bottom: 2px solid rgba(44, 62, 75, 0.4);
+    padding-bottom: 0.5rem;
+    margin-bottom: 1.5rem; }
+    .wp-block-crown-blocks-tabbed-content.type-accordion > .inner > .tabbed-content-tabs > .inner > .wp-block-crown-blocks-tabbed-content-tab.active > .inner > .tab-title:after {
+      content: '\2014'; }
+    .wp-block-crown-blocks-tabbed-content.type-accordion > .inner > .tabbed-content-tabs > .inner > .wp-block-crown-blocks-tabbed-content-tab > .inner > .tab-title {
+      font-size: 1.5rem;
+      cursor: pointer;
+      position: relative;
+      padding-right: 2.5rem; }
+      .wp-block-crown-blocks-tabbed-content.type-accordion > .inner > .tabbed-content-tabs > .inner > .wp-block-crown-blocks-tabbed-content-tab > .inner > .tab-title:after {
+        content: '+';
+        font-family: "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        font-weight: 400;
+        font-size: 2rem;
+        line-height: 1;
+        display: block;
+        width: 2rem;
+        text-align: center;
+        position: absolute;
+        right: 0;
+        top: -.3rem; }
+    .wp-block-crown-blocks-tabbed-content.type-accordion > .inner > .tabbed-content-tabs > .inner > .wp-block-crown-blocks-tabbed-content-tab > .inner > .tab-contents {
+      height: 0;
+      overflow: hidden;
+      -webkit-transition: height .2s ease-out;
+      transition: height .2s ease-out; }
+
 /*	Gallery
 ---------------------------------------------------------*/
 .wp-block-gallery.is-style-logos .blocks-gallery-grid {
