--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -711,6 +711,53 @@
 			}
 		}
 	}
+	&.type-accordion {
+		> .inner > .tabbed-content-tabs {
+			> .inner {
+				display: block;
+				> .wp-block-crown-blocks-tabbed-content-tab {
+					border-bottom: 2px solid rgba($dark-gray, .4);
+					padding-bottom: 0.5rem;
+					margin-bottom: 1.5rem;
+					&.active {
+						> .inner {
+							> .tab-title {
+								&:after {
+									content: '\2014';
+								}
+							}
+						}
+					}
+					> .inner {
+						> .tab-title {
+							font-size: 1.5rem;
+							cursor: pointer;
+							position: relative;
+							padding-right: 2.5rem;
+							&:after {
+								content: '+';
+								font-family: $font-family-sans-serif-alt;
+								font-weight: 400;
+								font-size: 2rem;
+								line-height: 1;
+								display: block;
+								width: 2rem;
+								text-align: center;
+								position: absolute;
+								right: 0;
+								top: -.3rem;
+							}
+						}
+						> .tab-contents {
+							height: 0;
+							overflow: hidden;
+							transition: height .2s ease-out;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 
