--- a/wp-content/themes/norcal-sbdc-ip/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/style.css
@@ -28861,6 +28861,112 @@ h1, .h1 {
       font-weight: 700;
       top: -.1em; }
 
+.text-color-light .simple-subscribe-form_wrapper input[type=text] {
+  -webkit-box-shadow: inset 0 -2px #fff;
+          box-shadow: inset 0 -2px #fff;
+  color: #fff; }
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+
+.text-color-light .simple-subscribe-form_wrapper .gfield.gfield_error label,
+.text-color-light .simple-subscribe-form_wrapper .gfield.gfield_error .validation_message {
+  color: #fff; }
+
+.text-color-dark .simple-subscribe-form_wrapper input[type=text] {
+  -webkit-box-shadow: inset 0 -2px #1D2F3C;
+          box-shadow: inset 0 -2px #1D2F3C;
+  color: #2C3E4B; }
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+
+.simple-subscribe-form_wrapper form {
+  display: block;
+  position: relative; }
+
+.simple-subscribe-form_wrapper input[type="text"] {
+  -webkit-box-shadow: inset 0 -2px #1D2F3C;
+          box-shadow: inset 0 -2px #1D2F3C;
+  color: #2C3E4B;
+  font-size: 1.5rem;
+  height: auto; }
+  .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+  .simple-subscribe-form_wrapper input[type=text]::placeholder {
+    color: rgba(44, 62, 75, 0.5); }
+
+.simple-subscribe-form_wrapper .gfield:last-child input[type=text] {
+  padding-right: 2.5rem; }
+
+.simple-subscribe-form_wrapper .ginput_container_email {
+  position: relative; }
+  .simple-subscribe-form_wrapper .ginput_container_email:before {
+    content: '';
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23ffffff" class="bi bi-envelope" viewBox="0 0 16 16"%3e%3cpath d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/%3e%3c/svg%3e');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2rem;
+    height: 2rem;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: .6rem; }
+  .simple-subscribe-form_wrapper .ginput_container_email input[type=text] {
+    padding-left: 3rem; }
+
+.simple-subscribe-form_wrapper .gform_footer {
+  padding-top: 0;
+  position: absolute;
+  right: 0;
+  bottom: 4px;
+  width: 1.5rem; }
+  .simple-subscribe-form_wrapper .gform_footer button[type=submit], .simple-subscribe-form_wrapper .gform_footer button[type=submit]:hover, .simple-subscribe-form_wrapper .gform_footer button[type=submit]:active, .simple-subscribe-form_wrapper .gform_footer button[type=submit]:focus {
+    background-color: transparent !important;
+    border: none; }
+  .simple-subscribe-form_wrapper .gform_footer button[type=submit]:after {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    line-height: 1;
+    font-family: icomoon;
+    content: "";
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    line-height: 1;
+    font-size: 1.5rem; }
+
 .wp-block-crown-blocks-header {
   padding-bottom: 1.25rem; }
   .wp-block-crown-blocks-header > .hr-container {
