--- a/wp-content/plugins/crown-blocks/src/block-champion-finder/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-champion-finder/style.scss
@@ -7,6 +7,8 @@
 		}
 	}
 	.search-results {
+		position: relative;
+		z-index: 1;
 		@media (min-width: 992px) {
 			width: percentage(1 / 3);
 		}
@@ -30,8 +32,9 @@
 	}
 	.results {
 		.state {
+			display: none;
 			border-top: 2px solid rgba(#fff, .6);
-			transition: border-color .2s, color .2s;
+			// transition: border-color .2s, color .2s;
 			margin-top: 1.5rem;
 			color: rgba(#fff, .75);
 			cursor: pointer;
@@ -39,14 +42,15 @@
 				margin-top: 0;
 			}
 			&.active {
+				display: block;
 				border-top-color: #fff;
 				color: #fff;
 				.headshot {
-					background-color: rgba(#fff, .6);
-					img {
-						opacity: 1;
-						filter: grayscale(0);
-					}
+					// background-color: rgba(#fff, .6);
+					// img {
+					// 	opacity: 1;
+					// 	filter: grayscale(0);
+					// }
 				}
 				+ .state {
 					border-top-color: #fff;
@@ -110,10 +114,11 @@
 				height: 0;
 				padding-top: 100%;
 				position: relative;
-				background-color: rgba(#fff, .3);
+				// background-color: rgba(#fff, .3);
+				background-color: mix(#1D2F3C, #fff, 80%);
 				border-radius: 1000px;
 				overflow: hidden;
-				transition: background-color .2s;
+				// transition: background-color .2s;
 				img {
 					position: absolute;
 					left: 0;
@@ -122,9 +127,10 @@
 					height: 100%;
 					border-radius: 1000px;
 					object-fit: cover;
-					filter: grayscale(.75);
-					opacity: .5;
-					transition: opacity .2s, filter .2s;
+					filter: grayscale(1);
+					mix-blend-mode: overlay;
+					opacity: .8;
+					// transition: opacity .2s, filter .2s;
 				}
 			}
 		}
@@ -133,16 +139,44 @@
 		display: none;
 		flex: 1 1 auto;
 		margin-left: 2rem;
-		min-height: 90vh;
+		// min-height: 90vh;
 		@media (min-width: 992px) {
 			display: block;
 		}
+		&.repositioned {
+			&:before {
+				content: '';
+				display: block;
+				height: 0;
+				padding-top: percentage(532 / 883);
+			}
+			> .inner {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				// mask-image: radial-gradient(67% 50%, black 20%, transparent 100%);
+				mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0.05) 20%, black 60%);
+				> .inner {
+					position: absolute;
+					left: 0;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					mask-image: linear-gradient(rgba(0, 0, 0, 0.05) 0, black 30%);
+				}
+			}
+			.map {
+				padding-top: 0;
+				position: absolute;
+			}
+		}
 		> .inner {
 			align-items: center;
-			position: sticky;
-			top: 2rem;
+			// position: sticky;
+			// top: 2rem;
 			display: flex;
-			// min-height: 90vh;
 		}
 	}
 	.map {
@@ -157,6 +191,11 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
+			transition: opacity .4s .2s, transform .4s;
+			opacity: 0;
+			&.active {
+				opacity: 1;
+			}
 			path,
 			polygon {
 				stroke-width: 1px;
@@ -164,13 +203,26 @@
 				fill: #1D2F3C;
 				cursor: pointer;
 				transition: fill .2s;
+				&.color-1 { fill: #1D2F3C; }
+				&.color-2 { fill: #233A4A; }
+				&.color-3 { fill: #101E27; }
+				&.color-4 { fill: #274358; }
+				&.color-5 { fill: #3D4F5C; }
+				&.color-6 { fill: #516371; }
 				&:hover {
-					fill: #15445A;
+					fill: #0F698F;
 				}
 				&.active {
 					fill: #0081B7;
 				}
 			}
 		}
+	}
+}
+
+.wp-block-crown-blocks-container.champion-finder-map-container {
+	overflow: hidden;
+	> .inner > .container-contents > .inner {
+		position: static;
 	}
 }
