--- a/wp-content/plugins/crown-blocks/src/block-champion-finder/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-champion-finder/style.scss
@@ -181,6 +181,13 @@
 		height: 100%;
 		left: 0;
 		top: 0;
+		transition: opacity .75s, transform .75s ease-out;
+		opacity: 0;
+		transform: scale(1.1);
+		&.active {
+			opacity: 1;
+			transform: none;
+		}
 		svg {
 			display: block;
 			position: absolute;
@@ -188,11 +195,7 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
-			transition: opacity .4s .2s, transform .4s;
-			opacity: 0;
-			&.active {
-				opacity: 1;
-			}
+			transition: transform .4s ease-out;
 			path,
 			polygon {
 				stroke-width: 1px;
