--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
@@ -41,7 +41,8 @@ h1, .h1 {
 
 .simple-subscribe-form_wrapper {
 	.text-color-light & {
-		input[type=text] {
+		input[type=text],
+		input[type=email] {
 			box-shadow: inset 0 -2px #fff;
 			color: #fff;
 			&::placeholder {
@@ -54,7 +55,8 @@ h1, .h1 {
 		}
 	}
 	.text-color-dark & {
-		input[type=text] {
+		input[type=text],
+		input[type=email] {
 			box-shadow: inset 0 -2px $dark-blue;
 			color: $dark-gray;
 			&::placeholder {
@@ -66,7 +68,8 @@ h1, .h1 {
 		display: block;
 		position: relative;
 	}
-	input[type=text] {
+	input[type=text],
+	input[type=email] {
 		box-shadow: inset 0 -2px $dark-blue;
 		color: $dark-gray;
 		font-size: 1.5rem;
@@ -76,7 +79,8 @@ h1, .h1 {
 		}
 	}
 	.gfield:last-child {
-		input[type=text] {
+		input[type=text],
+		input[type=email] {
 			padding-right: 2.5rem;
 		}
 	}
@@ -95,7 +99,8 @@ h1, .h1 {
 			left: 0;
 			top: .6rem;
 		}
-		input[type=text] {
+		input[type=text],
+		input[type=email] {
 			padding-left: 3rem;
 		}
 	}
